# kubeflow-profiles-operator

./: .charmcraft_output_packages.txt  .coverage  .gitignore  CONTRIBUTING.md  README.md  actions.yaml  charmcraft.yaml  config.yaml  kubeconfig.tmp  metadata.yaml  new_config  profiles.diff  pyproject.toml  requirements-fmt.txt  requirements-integration.in  requirements-integration.txt  requirements-lint.in  requirements-lint.txt  requirements-unit.in  requirements-unit.txt  requirements.in  requirements.txt  test-requirements.txt  tox.ini
.github/workflows/: build_and_scan_images.yaml  integrate.yaml  publish.yaml  tiobe_scan.yaml  tiobe_scan.yml
files/: crds.yaml
image-definitions/: README.md  build-scan.sh  build.sh  kubeflow.patch  publish.sh  setup.sh
lib/charms/kubeflow_profiles/v0/: kubeflow_profiles.py
src/: charm.py  constants.py  kubeflow_profiles_relation_lib.py  models.py  other_components.py  pebble_components.py  pebble_handlers.py  relation_component.py  relation_handlers.py
src/files/: auth_manifests.yaml.j2  ssl.conf.j2
src/prometheus_alert_rules/: KubeflowProfilesServices.rules
src/sunbeam_extensions/: charm.py  kubernetes_handlers.py
src/templates/: auth_manifests.yaml.j2  crds.yaml.j2  namespace-labels.yaml  namespace-labels.yaml.j2
terraform/: README.md  main.tf  outputs.tf  variables.tf
tests/: bundle.yaml
tests/integration/: charms_dependencies.py  constants.py  dependencies.py  profile.yaml  test_charm.py  test_charm_ambient.py
tests/interface_tests/: conftest.py
tests/unit/: __init__.py  conftest.py  test_operator.py  test_operator_fixtures.py
