# Copyright 2025 Canonical Ltd.
# See LICENSE file for licensing details.
[project]
name = "kubeflow-profiles-operator"
version = "1.10"
requires-python = ">=3.8.6"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.5.2",
    "attrs==24.2.0",
    "backports-strenum==1.3.1",
    "bcrypt==4.2.1",
    "cachetools==5.5.0",
    "certifi==2024.8.30",
    "cffi==1.17.1",
    "charmed-kubeflow-chisme==0.4.3",
    "charset-normalizer==3.4.0",
    "cosl==0.0.45",
    "cryptography==44.0.0",
    "deepdiff==6.2.1",
    "exceptiongroup==1.2.2",
    "google-auth==2.36.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.27.2",
    "hvac==2.3.0",
    "idna==3.10",
    "importlib-resources==6.4.5",
    "jinja2==3.1.4",
    "jsonschema==4.17.3",
    "juju==3.6.0.0",
    "kubernetes==30.1.0",
    "lightkube==0.15.6",
    "lightkube-models==1.31.1.8",
    "macaroonbakery==1.3.4",
    "markupsafe==2.1.5",
    "mypy-extensions==1.0.0",
    "oauthlib==3.2.2",
    "ops==2.17.1",
    "ordered-set==4.1.0",
    "packaging==24.2",
    "paramiko==3.5.0",
    "pkgutil-resolve-name==1.3.10",
    "protobuf==5.29.1",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.1",
    "pycparser==2.22",
    "pydantic==2.10.3",
    "pydantic-core==2.27.1",
    "pymacaroons==0.13.0",
    "pynacl==1.5.0",
    "pyrfc3339==1.1",
    "pyrsistent==0.20.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "rsa==4.9",
    "ruamel-yaml==0.18.6",
    "ruamel-yaml-clib==0.2.8",
    "serialized-data-interface==0.7.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "tenacity==9.0.0",
    "toposort==1.10",
    "typing-extensions==4.12.2",
    "typing-inspect==0.9.0",
    "urllib3==2.2.3",
    "websocket-client==1.8.0",
    "websockets==13.1",
    "zipp==3.20.2",
]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

# Formatting tools configuration
[tool.black]
line-length = 99
target-version = ["py38"]

[tool.isort]
line_length = 99
profile = "black"

# Linting tools configuration
[tool.flake8]
max-line-length = 99
max-doc-length = 99
max-complexity = 10
exclude = [".git", "__pycache__", ".tox", "build", "dist", "*.egg_info", "venv"]
select = ["E", "W", "F", "C", "N", "R", "D", "H"]
# Ignore W503, E501 because using black creates errors with this
# Ignore D107 Missing docstring in __init__
ignore = ["W503", "E501", "D107"]
# D100, D101, D102, D103: Ignore missing docstrings in tests
per-file-ignores = ["tests/*:D100,D101,D102,D103,D104"]
docstring-convention = "google"
# Check for properly formatted copyright header in each file
copyright-check = "True"
copyright-author = "Canonical Ltd."
copyright-regexp = "Copyright\\s\\d{4}([-,]\\d{4})*\\s+%(author)s"
